updated species page

--- a/_sass/_badges.scss
+++ b/_sass/_badges.scss
@@ -249,7 +249,7 @@ div a img {
     background:#FF0000;
     }
 
-#Insecta.leftMouse {
+#Hexapod.leftMouse {
     top: 54.5%/**distance from top of image */;
     height:8.5% /**region height*/;
     background:#00FFFF;
