--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,12 +5,14 @@
 /*
    Typography variables
    ========================================================================== */
+@import "fonts";
 
 $base-font                   	: Georgia,Times,"Times New Roman",serif;
 $heading-font                	: "Helvetica Neue","Segoe UI",Arial,sans-serif;
 $caption-font                	: $base-font;
 $code-font                   	: monospace;
 $alt-font                    	: $heading-font;
+$home-font                      : "RAYJOHNS", sans-serif;
 
 $doc-font-size               	: 16;
 $doc-line-height             	: 24;
